--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 	<title>Benvenuto!</title>
   </head>
   <body>
-	<div class="container">
+    <div class="container">
 	<h1>Ciao, inserisci i tuoi dati per accedere al sito!</h1>
 		<form>
 			  <div class="form-group">
 				<label for="exampleInputEmail1">E-mail</label>
 				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci e-mail">
+                <p id="emailHelp">Email deve essere nel formato nome@dominio </p>
 			  </div>
 			  <div class="form-group">
 				<label for="exampleInputPassword1">Password</label>
