--- a/registrazione.html
+++ b/registrazione.html
@@ -4,7 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+	<!-- Uso un font da google -->
+	<link href="https://fonts.googleapis.com/css?family=Dokdo" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<title>Pagina di Registrazione</title>
@@ -15,41 +17,108 @@
 		<form>
 			  <div class="form-group">
 				<label for="nome">Nome</label>
-				<input type="nome" class="form-control" id="nome" placeholder="Inserisci il tuo nome">
+				<input type="nome" class="form-control" style="width:300px;" id="nome" placeholder="Inserisci il tuo nome">
 			  </div>
 			  <div class="form-group">
 				<label for="cognome">Cognome</label>
-				<input type="cognome" class="form-control" id="cognome" placeholder="Inserisci il tuo cognome">
+				<input type="cognome" class="form-control" style="width:300px;" id="cognome" placeholder="Inserisci il tuo cognome">
 			  </div>
 			  <div class="form-group">
 				<label for="datanascita">Data di Nascita</label>
-				<input type="date" class="form-control" id="datanascita">
+				<input type="date" class="form-control" style="width:300px;" id="datanascita">
 			  </div>
 			  <div class="form-group">
 				<label for="indirizzo">Indirizzo</label>
-				<input type="indirizzo" class="form-control" id="indirizzo" placeholder="Inserisci il tuo indirizzo">
+				<input type="indirizzo" class="form-control" style="width:300px;" id="indirizzo" placeholder="Inserisci il tuo indirizzo">
 			  </div>
 			  <div class="form-group">
 				<label for="citta">Città</label>
-				<input type="citta" class="form-control" id="citta" placeholder="Inserisci la tua città">
+				<input type="citta" class="form-control" style="width:300px;" id="citta" placeholder="Inserisci la tua città">
 			  </div>
 			  <div class="form-group">
 				<label for="cap">CAP</label>
-				<input type="cap" class="form-control" id="cap" placeholder="Inserisci il tuo CAP">
+				<input type="cap" class="form-control" style="width:300px;" id="cap" placeholder="Inserisci il tuo CAP">
 			  </div>
 			  <div class="form-group">
 				<label for="mail">E-mail</label>
-				<input type="mail" class="form-control" id="mail" placeholder="Inserisci e-mail">
+				<input type="mail" class="form-control" style="width:300px;" id="mail" placeholder="Inserisci e-mail">
 			  </div>
 			  <div class="form-group">
 				<label for="password">Password</label>
-				<input type="password" class="form-control" id="password" placeholder="Inserisci la password">
+				<input type="password" class="form-control" style="width:300px;" id="password" placeholder="Inserisci la password">
 			  </div>
 			  <div class="form-group">
 				<label for="password">Conferma Password</label>
-				<input type="password" class="form-control" id="password1" placeholder="Conferma la password di prima">
+				<input type="password" class="form-control" style="width:300px;" id="password1" placeholder="Conferma la password di prima">
 			  </div>
+			  <div class="container">
+				 <div class="row">
+						<div class="col-sm">
+						  <div class="dropdown">
+							  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownSfondo" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Colore dello Sfondo
+							  </button>
+							  <div id="sfondo" class="dropdown-menu" aria-labelledby="dropdownSfondo">
+								<a class="dropdown-item" href="#" id="rosso">Rosso</a>
+								<a class="dropdown-item" href="#" id="blue">Blu</a>
+								<a class="dropdown-item" href="#" id="giallo">Giallo</a>
+							  </div>
+						  </div>
+						</div>
+					  <div class="col-sm">
+						  <div class="dropdown">
+							  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownDim" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Dimensione Carattere
+							  </button>
+							  <div id="dimensione" class="dropdown-menu" aria-labelledby="dropdownDim">
+								<a class="dropdown-item" href="#" id="12px">12px</a>
+								<a class="dropdown-item" href="#" id="14px">14px</a>
+								<a class="dropdown-item" href="#" id="16px">16px</a>
+								<a class="dropdown-item" href="#" id="24px">24px</a>
+							  </div>
+						  </div>
+					  </div>
+					  <div class="col-sm">
+						  <div class="dropdown">
+							  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownFont" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Tipo Carattere
+							  </button>
+							  <div id="tipo" class="dropdown-menu" aria-labelledby="dropdownFont">
+								<a class="dropdown-item" href="#" id="times" >Times New Roman</a>
+								<a class="dropdown-item" href="#" id="arial" >Arial</a>
+								<a class="dropdown-item" href="#" id="dokdo" >Dokdo</a>
+								<a class="dropdown-item" href="#" id="indie" >Indie Flower</a>
+							  </div>
+						  </div>
+					  </div>
+					  <div class="col-sm">
+						  <div class="dropdown">
+							  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownCar" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Colore Carattere
+							  </button>
+							  <div id="colore" class="dropdown-menu" aria-labelledby="dropdownCar">
+								<a class="dropdown-item" href="#" id="bianco">Bianco</a>
+								<a class="dropdown-item" href="#" id="nero">Nero</a>
+								<a class="dropdown-item" href="#"id="rosso">Rosso</a>
+							  </div>
+						  </div>
+					  </div>
+					  <div class="col-sm">
+						  <div class="dropdown">
+							  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownPos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Posizione Menù del Sito
+							  </button>
+							  <div id="posizione" class="dropdown-menu" aria-labelledby="dropdownPos">
+								<a class="dropdown-item" href="#">Sinistra</a>
+								<a class="dropdown-item" href="#">Destra</a>
+							  </div>
+						  </div>
+					  </div>
+				  </div>
+			  </div>
+			  <br>
 			  <button type="submit" class="btn btn-primary">Registrati!</button>
+
 		</form>
 		<a href="index.html">Torna alla home</a>
 	</div>
@@ -59,5 +128,85 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script>
+	$(document).ready(function(){
+		$('#sfondo a').click(function () {
+			 // sostuisci il node del menu con la selezione
+			 var color = $(this).attr('id'); 
+			 $('#dropdownSfondo').text(color); 
+			 switch(color){
+				case "rosso":
+					$('body').css("background-color", "red");             
+					break;
+				case "blue":
+					$('body').css("background-color", "blue");             
+					break;
+				case "giallo":
+					$('body').css("background-color", "#FFFF00");             
+					break;
+			 }
+		});
+		
+		$('#dimensione a').click(function () {
+			 // sostuisci il node del menu con la selezione
+			 var dim = $(this).attr('id'); 
+			 $('#dropdownDim').text(dim); 
+			 switch(dim){
+				case "12px":
+					$('body').css("font-size", "12px");             
+					break;
+				case "14px":
+					$('body').css("font-size", "14px");             
+					break;
+				case "16px":
+					$('body').css("font-size", "16px");             
+					break;
+				case "24px":
+					$('body').css("font-size", "24px");             
+					break;
+			 }
+		});
+		
+        $('#tipo a').click(function () {
+             // sostuisci il node del menu con la selezione
+             var font = $(this).attr('id'); 
+             $('#dropdownFont').text(font); 
+             // modifca al volo in background , non funziona ancora
+             switch(font){
+                case "times":
+                    $('body').css("font-family", "Times New Roman");             
+                    break;
+                case "arial":
+                    $('body').css("font-family", "Arial");             
+                    break;
+				case "dokdo":
+					$('body').css("font-family", "'Dokdo', cursive");
+					break;
+				case "indie":
+					$('body').css("font-family", "'Indie Flower', cursive");
+					break;
+             }
+        });
+		
+        $('#colore a').click(function () {
+             // sostuisci il node del menu con la selezione
+             var car = $(this).attr('id'); 
+             $('#dropdownCar').text(car); 
+             // modifca al volo in background , non funziona ancora
+             switch(car){
+                case "bianco":
+                    $('body').css("color", "white");             
+                    break;
+                case "nero":
+                    $('body').css("color", "black");             
+                    break;
+				case "rosso":
+					$('body').css("color", "red");
+					break;
+             }
+        });
+	});
+	
+	</script>
   </body>
  </html>
