AGGIORNATO CON PROVA MENU'

--- a/dropdown_example.html
+++ b/dropdown_example.html
@@ -33,12 +33,13 @@
     </div>
 
     <script>
-        /*Storage.prototype.setUserPrefs = function(key, obj) {
+		//alert("esempio");
+        Storage.prototype.setUserPrefs = function(key, obj) {
             return this.setUserPrefs(key, JSON.stringify(obj))
         }
         Storage.prototype.getPrefs = function(key) {
             return JSON.parse(this.getItem(key))
-        }*/
+        }
 
         alert(localStorage.get('Fab').background);
         //localStorage.remove('Fab');
