--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 	<h1>Ciao, inserisci i tuoi dati per accedere al sito!</h1>
 		<form>
 			  <div class="form-group">
-				<label for="exampleInputEmail1">E-mail</label>
-				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci e-mail">
-                <p id="emailHelp">Email deve essere nel formato nome@dominio </p>
+				<label for="email1">E-mail</label>
+				<input type="email" class="form-control" id="email1" aria-describedby="emailHelp" placeholder="Inserisci e-mail">
+                <u><p id="emailHelp">N.B. ricorda che la mail deve essere nel formato nome@dominio.qualcosa</p></u>
 			  </div>
 			  <div class="form-group">
-				<label for="exampleInputPassword1">Password</label>
-				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="password">
+				<label for="pass1">Password</label>
+				<input type="password" class="form-control" id="pass1" placeholder="password">
 			  </div>
-			  <button type="submit" class="btn btn-primary">Entra!</button>
+			  <button id="entra" type="submit" class="btn btn-primary">Entra!</button>
 		</form>
 		<a href="registrazione.html">Non sei registrato? Clicca qui!</a>
 	</div>
@@ -32,5 +32,37 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	
+	<script>
+	$('#entra').click(function () {
+		var user = $('#email1').val();
+		var pwd = $('#pass1').val();
+		
+		//localStorage.getItem(mail);
+		if (localStorage.getItem('user') === null)
+			{
+				alert("errore");
+			}
+		else
+			{
+				var user = JSON.parse(localStorage.getItem('user'));
+				if (user.username && user.pwd != pwd)
+					{
+						alert("login fallito....");
+					}
+				else
+					{
+						console.log(user);
+						alert("benvenuto!");
+						
+						//localStorage.set(utenteloggato);
+					}		
+			}
+			
+		window.location.replace("homepage.html");
+		
+	});
+	</script>
+  
   </body>
 </html>
