--- a/layout.html
+++ b/layout.html
@@ -21,15 +21,13 @@
   </head>
   <body>
 
-    <div class="container">
-
         
   <div class="container">
       <div class="row">
-        <div class="col-md-8 order-2">
+        <div class="col-md-8 order-2" id="div1">
           Body
         </div>
-        <div class="col-md-4 order-1">
+        <div class="col-md-4 order-1" id="div2">
           Menu 
         </div>
       </div>
@@ -47,6 +45,18 @@
         </div>
       </div>
   </div>
-    
+
+<button type="submit" class="btn btn-primary" id="scambia">scambia</button>
+  
+  
   </body>
+ <script>
+ $(document).ready(function(){
+	$('#scambia').click(function () {
+		$('#div1').removeClass("order-2").addClass("order-1");
+		$('#div2').removeClass("order-1").addClass("order-2");
+	});
+});
+ </script>
+ 
  </html>
