--- a/homepage.html
+++ b/homepage.html
@@ -11,19 +11,25 @@
   </head>
   <body>
     <div class="container">
-	<h1>Ciao, <b id="name"></b>! Benvenuto nella Homepage!</h1>
+		<div class="row">
+			<div class="col-md-8 order-2" id="bodyHome">
+				<h1>Ciao, <b id="name"></b>! Benvenuto nella Homepage!</h1>
+				
+				valutare poi tasto ESCI .... esce dall'area
 
-	a seconda del posizionamento impostato dalla registrazione, si vedrà il menù
-	<!-- MENU CHE VIENE SCELTO DALL'UTENTE-->
-		<div class="col-md-4 order-1" id="MenuReg">
-			<nav class="nav flex-column">
-			  <a class="nav-link active" href="#">Slide Show</a>
-			  <a class="nav-link" href="#">8 Puzzle Game</a>
-			  <a class="nav-link" href="#">Memory Game</a>
-			  <a class="nav-link" href="#">Calcolatrice</a>
-			</nav>
+				<!--a seconda del posizionamento impostato dalla registrazione, si vedrà il menù-->
+			</div>
+			<!-- MENU CHE VIENE SCELTO DALL'UTENTE-->
+				<div class="col-md-4 order-1" id="menuHome">
+					<nav class="nav flex-column">
+					  <a class="nav-link active" href="#">Slide Show</a>
+					  <a class="nav-link" href="#">8 Puzzle Game</a>
+					  <a class="nav-link" href="#">Memory Game</a>
+					  <a class="nav-link" href="#">Calcolatrice</a>
+					</nav>
+				</div>
+			<!---->
 		</div>
-	<!---->
 	</div>
 
     <!-- Optional JavaScript -->
@@ -42,9 +48,19 @@
 		$('body').css("font-size", user.dimension);
 		$('body').css("font-family", user.type); 
 		$('body').css("color", user.color);
-		$('body').css(user.menu);
-	}	
-	
+		console.log(user.menu);
+		if (user.menu == "sin")
+			{
+				$('#menuHome').removeClass("order-2").addClass("order-1");
+				$('#bodyHome').removeClass("order-1").addClass("order-2");
+			}
+		else
+			{
+				$('#menuHome').removeClass("order-1").addClass("order-2");
+				$('#bodyHome').removeClass("order-2").addClass("order-1");
+			}
+	}
+			
 	$(document).ready(function(){
 	
 		if (localStorage.getItem('user') === null)
