--- a/8puzzle.html
+++ b/8puzzle.html
@@ -1,4 +1,4 @@
- <!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -9,36 +9,31 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<title>Benvenuto!</title>
   </head>
- <body>
- <div class="container">
- 	<h1>SlideShow Immagini</h1>
-		<div class="row">
-			<div class="col-md-8 order-2">
-				<form>
-					<div class="form-group">
-						<label for="image">scegli le tue immagini!</label>
-						<input type="file" class="form-control" style="width:300px;" id="uploadimg" multiple>
-					</div>
-					<div class="form-group">
-						<label for="tempo">Imposta tempo</label>
-						<input type="tempo" class="form-control" style="width:300px;" id="tempo" placeholder="Imposta l'intervallo di tempo....">
-					</div>
-				</form>
-				<button id="start" type="submit" class="btn btn-primary">Start SlideShow</button>
-				<button id="stop" type="submit" class="btn btn-primary">Stop SlideShow</button>
+<body>
+	<div class="container">
+		<h1>8 Puzzle Game</h1>
+		<br>
+			<div class="row">
+				<div class="col">1</div>
+				<div class="col">2</div>
+				<div class="col">3</div>
 			</div>
-		</div>
- </div>
- 
- <!-- CAROUSEL -->
-
- <!---->
- 
- </body>
+			<div class="row">
+				<div class="col">4</div>
+				<div class="col">5</div>
+				<div class="col">6</div>
+			</div>
+			<div class="row">
+				<div class="col">7</div>
+				<div class="col">8</div>
+				<div class="col">(vuoto)</div>
+			</div>
+	</div>
+	<button id="nuovogioco" type="submit" class="btn btn-primary">Nuovo Gioco</button>
+</body>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  
 </html>
