--- a/8puzzle.html
+++ b/8puzzle.html
@@ -14,19 +14,19 @@
 		<h1>8 Puzzle Game</h1>
 		<br>
 			<div class="row">
-				<div class="col">1</div>
-				<div class="col">2</div>
-				<div class="col">3</div>
+				<div class="col-"><img src="img/1.png"></div>
+				<div class="col-"><img src="img/2.png"></div>
+				<div class="col-"><img src="img/3.png"></div>
 			</div>
 			<div class="row">
-				<div class="col">4</div>
-				<div class="col">5</div>
-				<div class="col">6</div>
+				<div class="col-"><img src="img/4.png"></div>
+				<div class="col-"><img src="img/5.png"></div>
+				<div class="col-"><img src="img/6.png"></div>
 			</div>
 			<div class="row">
-				<div class="col">7</div>
-				<div class="col">8</div>
-				<div class="col">(vuoto)</div>
+				<div class="col-"><img src="img/7.png"></div>
+				<div class="col-"><img src="img/8.png"></div>
+				<div class="col-"><img src="img/vuoto.png"></div>
 			</div>
 	</div>
 	<button id="nuovogioco" type="submit" class="btn btn-primary">Nuovo Gioco</button>
