--- a/slideshow.html
+++ b/slideshow.html
@@ -9,36 +9,87 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<title>Benvenuto!</title>
   </head>
- <body>
- <div class="container">
- 	<h1>SlideShow Immagini</h1>
-		<div class="row">
-			<div class="col-md-8 order-2">
-				<form>
-					<div class="form-group">
-						<label for="image">scegli le tue immagini!</label>
-						<input type="file" class="form-control" style="width:300px;" id="uploadimg" multiple>
-					</div>
-					<div class="form-group">
-						<label for="tempo">Imposta tempo</label>
-						<input type="tempo" class="form-control" style="width:300px;" id="tempo" placeholder="Imposta l'intervallo di tempo....">
-					</div>
-				</form>
-				<button id="start" type="submit" class="btn btn-primary">Start SlideShow</button>
-				<button id="stop" type="submit" class="btn btn-primary">Stop SlideShow</button>
+<body>
+	<div class="container">
+		<h1>SlideShow Immagini</h1>
+			<div class="row">
+				<div class="col-md-8 order-2">
+					<form>
+						<div class="form-group">
+							<label for="image">scegli le tue immagini!</label>
+							<input type="file" class="form-control" style="width:300px;" id="uploadimg" multiple>
+						</div>
+						<div class="form-group">
+							<label for="tempo">Imposta tempo</label>
+							<input type="text" class="form-control" style="width:300px;" id="tempo" placeholder="Imposta l'intervallo di tempo....">
+							<button id="set_tempo" type="submit" class="btn btn-primary">Imposta Tempo</button>
+						</div>
+					</form>
+					<!-- CAROUSEL -->
+						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-pause="false" data-interval="2000">
+							<ol class="carousel-indicators">
+								<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+								<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+								<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+							</ol>
+							  <div class="carousel-inner">
+									<div class="carousel-item active">
+									  <img class="d-block w-10" src="img/07_vietti_barbera_dAsti_tre_vigne.jpg" alt="First slide">
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-10" src="img/alisia.jpg" alt="Second slide">
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-10" src="img/bartolini-pallet.png" alt="Third slide">
+									</div>
+							  </div>
+								  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									<span class="sr-only">Previous</span>
+								  </a>
+								  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+									<span class="carousel-control-next-icon" aria-hidden="true"></span>
+									<span class="sr-only">Next</span>
+								  </a>
+						</div>
+					<!---->
+					<button id="start" type="submit" class="btn btn-primary">Start SlideShow</button>
+					<button id="stop" type="submit" class="btn btn-primary">Stop SlideShow</button>
+				</div>
 			</div>
-		</div>
- </div>
- 
- <!-- CAROUSEL -->
-
- <!---->
- 
- </body>
+	</div>
+</body>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  
+<script>
+$(document).ready(function(){
+
+	 /*$('.carousel').carousel({
+	  interval: 5000
+	 });*/
+	 
+	 $('#set_tempo').click(function () {
+		//console.log($('#tempo').val());
+		alert("aaaa");
+		//console.log($('#carouselExampleIndicators').attr());
+		$('.carousel').attr("data-interval","10000");
+	 });
+	 
+	 $('#start').click(function () {
+		$('.carousel').carousel()
+	 });
+	 
+	 $('#stop').click(function () {
+		$('.carousel').carousel('pause')
+	 });
+	 
+	 
+	 
+
+	 
+});
+</script>  
 </html>
