--- a/slideshow.html
+++ b/slideshow.html
@@ -21,8 +21,8 @@
 						</div>
 						<div class="form-group">
 							<label for="tempo">Imposta tempo</label>
-							<input type="text" class="form-control" style="width:300px;" id="tempo" placeholder="Imposta l'intervallo di tempo....">
-							<button id="set_tempo" type="button" class="btn btn-primary">Imposta Tempo</button>
+							<input type="text" class="form-control" style="width:300px;" id="tempo" placeholder="Imposta l'intervallo di tempo.... (ms)">
+							<button id="set_tempo" type="button" class="btn btn-primary">Imposta Tempo (in millisecondi)</button>
 						</div>
 					</form>
 					<!-- CAROUSEL -->
@@ -88,7 +88,8 @@ $(document).ready(function(){
 	 
 	$('#set_tempo').click(function () {
 		const options = $("#carouselobj").data()['bs.carousel']["_config"];
-		options.interval = 10000;
+		//options.interval = 10000;
+		options.interval = $('#tempo').val();
 	});
 
 		//console.log($('.carousel').attr('data-interval'));
