qualche modifica + prima stesura calcolatrice Please enter the commit message for your changes. Lines starting

--- a/provaPuzzle.html
+++ b/provaPuzzle.html
@@ -30,6 +30,8 @@
 			</div>
 	</div>
 	<button id="nuovogioco" type="submit" class="btn btn-primary">Nuovo Gioco</button>
+	<br>
+	<label>numero mosse effettuate:<b></b></label>
 </body>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
