--- a/memorygame.html
+++ b/memorygame.html
@@ -63,10 +63,30 @@
 			</div>
 	</div>
 	<button id="nuovogioco" type="submit" class="btn btn-primary">Nuovo Gioco</button>
+	<br>
+	<label>Tempo trascorso: <b><span id="minuti"></span>:<span id="secondi"></span></b></label>
+	<br>
+	<label>Numero tentativi effettuati:<b></b></label>
 </body>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script>
+$(document).ready(function(){
+	$('#nuovogioco').click(function () {
+		/*Funzione per TIMER .... parte quando inizio un nuovo gioco*/
+		var sec = 0;
+			function pad (val){ 
+				return val > 9 ? val : "0" + val;
+			}
+			setInterval( function(){
+				document.getElementById("secondi").innerHTML=pad(++sec%60);
+				document.getElementById("minuti").innerHTML=pad(parseInt(sec/60,10));
+			}, 1000);
+		
+	});
+});
+</script>
 </html>
