--- a/slideshow.html
+++ b/slideshow.html
@@ -39,6 +39,7 @@
 								<li data-target="#carouselitem0" data-slide-to="0" class="active"></li>
 								<li data-target="#carouselitem1" data-slide-to="1"></li>
 								<li data-target="#carouselitem2" data-slide-to="2"></li>
+								<li data-target="#carouselitem3" data-slide-to="3"></li>
 							</ol>
 							  <div class="carousel-inner">
 									<div class="carousel-item active">
@@ -49,6 +50,9 @@
 									</div>
 									<div class="carousel-item">
 										<img id="img3" class="d-block w-10" src="" alt="Third slide" width="200px" height="200px">
+									</div>
+									<div class="carousel-item">
+										<img id="img4" class="d-block w-10" src="" alt="Fourth slide" width="200px" height="200px">
 									</div>
 							  </div>
 								  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
