funzione scambia vuota

--- a/provaPuzzle.html
+++ b/provaPuzzle.html
@@ -67,7 +67,16 @@ function refreshtabella(a){
         }
     }
 }
-    
+
+function scambio(pos){
+
+    // funziona che controlla:
+    // 1) la posizione subito a destra e a sinistra
+    // 2) tre posizioni a destre e a sinistra 
+    // se in almeno una c'è l'elemento vuoto si può fare lo scambio quindi ritorno True 
+
+}
+
 $(document).ready(function(){
 
     var celle = ['1','2','3','4','5','6','7','8','9'];
