--- a/calcolatrice.html
+++ b/calcolatrice.html
@@ -47,6 +47,9 @@
 		</div>
 		<a href="homepage.html">Torna alla Home</a>
 	</div>
+	<h1>Piccola calcolatrice per le operazioni di: somma, sottrazione, divisione,
+moltiplicazione, elevamento a potenza. La calcolatrice deve funzionare in
+modo che ogni volta che si preme un’operazione, il display si ripulisce.</h1>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
