--- a/memorygame.html
+++ b/memorygame.html
@@ -67,6 +67,16 @@
 	<label>Tempo trascorso: <b><span id="minuti"></span>:<span id="secondi"></span></b></label>
 	<br>
 	<label>Numero tentativi effettuati:<b></b></label>
+	<br>
+	<h1>Gioco del Memo: si predispongono N coppie di immagini (uguali 2 a 2) e
+si associano casualmente a delle posizioni nel documento; l’utente
+cliccando su di una posizione visualizza l’immagine corrispondente e deve
+trovare la posizione con l’immagine gemella: se la trova le due immagini
+rimangono visibili, altrimenti le immagini scoperte vengono nuovamente
+nascoste. Si termina quando sono state scoperte tutte le coppie e
+l’applicazione produce il tempo impiegato ed il numero di tentativi
+effettuati. Prevedere il bottono di “Nuovo gioco” che rimescola le carte
+(riesegue l’associazione causuale tra immagini e posizioni).</h1>
 </body>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
