--- a/esempioMemory.html
+++ b/esempioMemory.html
@@ -44,8 +44,8 @@ var contaclick = 0;
 
 var cellavuota = 9;
 
-var selprec;
-var selcorrente;
+var selprec = -1;
+var selcorrente = -1;
 
 var celle = ['1','1','3','3','5','5','7','7','vuoto'];
 
@@ -78,15 +78,28 @@ function scambio(pos){
 	
      console.log("id dom: "+celle[pos-1]+".png posizione: "+ Number(pos-1));
 
-     if (!selcorrente){
-        console.log("seleziono");
+	 console.log(selcorrente);
+	 //se non è stato selezionato niente, imposto selcorrente
+     if (selcorrente == -1){
         selcorrente = pos-1;
-     }
-     else{
+        console.log("seleziono "+selcorrente);
+	 }
+     else{//altrimenti ho già una selezione, quindi confronto con quella precedente
         selprec = selcorrente;
         selcorrente = pos-1;
         console.log("confronto selezioni");
         console.log("corrente: "+celle[selcorrente]+" pos: "+selcorrente+" precedente:"+celle[selprec]+ " pos: "+ selprec);
+		if (celle[selcorrente] == celle[selprec])
+			{
+			var corr = selcorrente + 1;
+			var prec = selprec + 1;
+			alert("le selezioni sono uguali");
+			$('#'+corr.toString()+" img").attr('src','img/'+celle[selcorrente]+'.png');
+			$('#'+prec.toString()+" img").attr('src','img/'+celle[selprec]+'.png');
+			//$('#1').attr('src','img/1.png');
+			//console.log($('#'+selcorrente.toString()).attr('src','img/'+celle[selcorrente]+'.png'));
+			//console.log($('#'+selcorrente.toString()).attr('src','img/1.png'));
+			}
      }
 }
 
@@ -112,22 +125,29 @@ function haiVinto(){
 }
 
 $(document).ready(function(){
+
+	$('img').attr('src','img/vuoto.png');
     
+	shuffle(celle);
+	//refreshtabella(celle);
     // inzia nuovo gioco
 	$('#nuovogioco').click(function () {
 		$('#win').attr("class","invisible");
 		contaclick = 0;
 		$('#mosse').html(contaclick);
-        selcorrente = null;
-        selprec = null;
+        selcorrente = -1;
+        selprec = -1;
         shuffle(celle);//commentare x velocizzare soluzione
-        refreshtabella(celle);
+        //refreshtabella(celle);
+		console.log(celle);
 	});
 
     // click su di una cella 
     $('.col-').click(function (){
 		var clickcella = $(this).attr('id');
+		console.log(clickcella);
 		scambio(Number(clickcella));
+		
     });
 
 });
